Correct text-align property
Should be "center"

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -75,5 +75,5 @@ img::-moz-selection {
 
 div.audio-player {
   margin: auto;
-  text-align: auto
+  text-align: center
 }
